# sflock

./: .gitignore  .yara-ci.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/actions/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: publish.yml  pythonpackage.yml  test.yml
sflock/: abstracts.py  ident.py  main.py  misc.py
sflock/compat/: magic.py
sflock/data/: zipjail.elf
sflock/unpack/: office.py  pgp.py  zip7.py
tests/: test_7z.py  test_lzip.py  test_main.py  test_pgp.py  test_pgp_metadata.py  test_shellcode.py  test_unpack.py  test_win.py  test_zip.py  test_zpaq.py
tests/files/: dummy_encrypted.gpg
