[project]
name = "SFlock2"
version = "0.3.70"
description = "Sample staging and detonation utility"
readme = "README.md"
license = "GPLv3"
include = ["sflock/**"]
keywords = [ "sflock", "unarchive"]
authors = [{name="Hatching B.V.", email="jbr@hatching.io"}]

[tool.poetry]
packages = [{ include = "sflock" }]

[tool.dependencies]
python = ">=3.10,<4.0"
click = "*"
cryptography = ">=44.0.0"
olefile = ">=0.43"
pefile = "*"
python-magic-bin = {version = ">=0.4.14", markers = "sys_platform == 'win32'" }
python-magic = {version = ">=0.4.13", markers = "sys_platform == 'linux'" }

unicorn = {version = ">=2.0.0", optional = true }
yara-python = {version = ">=4.1.0", optional = true }

mock = {version = ">=5.1.0", optional = true }
pytest = {version = ">=8.2.2", optional = true }

[tool.distutils.bdist_wheel]
universal = true

[tool.optional-dependencies]
shellcode = ["unicorn", "yara-python"]
dev = ["mock", "pytest"]
win32 = ["python-magic-bin"]
linux = ["python-magic"]

[tool.scripts]
sflock = "sflock.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]
